[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/PNG/Tiles/platformPack_tile041.png" type="Texture" id=1]
[ext_resource path="res://assets/Items/switchGreen_mid.png" type="Texture" id=2]
[ext_resource path="res://assets/Items/switchGreen_right.png" type="Texture" id=3]
[ext_resource path="res://assets/Items/switchGreen_left.png" type="Texture" id=4]
[ext_resource path="res://game/doors/DoorSwitch.gd" type="Script" id=5]
[ext_resource path="res://assets/Sounds/switch10.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/Sounds/switch_007.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.6879, 56.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 96 )

[sub_resource type="Animation" id=3]
resource_name = "activate_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SwitchDetector/Sprites/SwitchOnLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwitchDetector/Sprites/SwtichIdle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwitchDetector/Sprites/SwitchOnRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "activate_right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SwitchDetector/Sprites/SwitchOnLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwitchDetector/Sprites/SwtichIdle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwitchDetector/Sprites/SwitchOnRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "close_door"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DoorFrame/Door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -192 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SwitchDetector/Sprites/SwitchOnLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwitchDetector/Sprites/SwtichIdle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwitchDetector/Sprites/SwitchOnRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DoorFrame/Door:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SwitchDetector/Sprites/SwitchOnLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwitchDetector/Sprites/SwtichIdle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwitchDetector/Sprites/SwitchOnRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DoorFrame/Door:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -192 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "open_door"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DoorFrame/Door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -192 ) ]
}

[node name="DoorSwitch" type="Node2D"]
z_index = 20
z_as_relative = false
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ -96.0 ]
}

[node name="SwitchDetector" type="Area2D" parent="."]
position = Vector2( -255.688, 0 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="Sprites" type="Node2D" parent="SwitchDetector"]

[node name="SwitchOnLeft" type="Sprite" parent="SwitchDetector/Sprites"]
visible = false
position = Vector2( -17, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="SwtichIdle" type="Sprite" parent="SwitchDetector/Sprites"]
position = Vector2( 1.02036, -10.6683 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="SwitchOnRight" type="Sprite" parent="SwitchDetector/Sprites"]
visible = false
position = Vector2( 18, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchDetector"]
position = Vector2( 0, -8.5 )
shape = SubResource( 1 )

[node name="DoorFrame" type="Node2D" parent="."]

[node name="Door" type="StaticBody2D" parent="DoorFrame"]
position = Vector2( 0, -192 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="DoorFrame/Door"]
position = Vector2( -32, 0 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="DoorFrame/Door"]
position = Vector2( 32, 0 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="DoorFrame/Door"]
position = Vector2( -32, -64 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="DoorFrame/Door"]
position = Vector2( 32, -64 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="DoorFrame/Door"]
position = Vector2( -32, 64 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="DoorFrame/Door"]
position = Vector2( 32, 64 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorFrame/Door"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/activate_left = SubResource( 3 )
anims/activate_right = SubResource( 4 )
anims/close_door = SubResource( 5 )
anims/default_close = SubResource( 6 )
anims/default_open = SubResource( 7 )
anims/open_door = SubResource( 8 )

[node name="SwitchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[connection signal="body_entered" from="SwitchDetector" to="." method="_on_SwitchDetector_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
